a2a4j-core/src/main/java/io/github/PheonixHkbxoic/a2a4j/core/spec/error/TaskNotFoundError.java
package io.github.PheonixHkbxoic.a2a4j.core.spec.error;

/**
 * @author PheonixHkbxoic
 */
public class TaskNotFoundError extends JsonRpcError {
    public TaskNotFoundError() {
        this.setCode(-32001);
        this.setMessage("Task not found");
    }
}
